--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,16 @@ services:
         ports:
             - '8501:8501'
 
+    nginx:
+        container_name: nginx
+        restart: always
+        build: ./nginx
+        ports:
+            - "80:80"
+        depends_on:
+            - frontend
+
+
     backend:
         build:
             context: ./backend
