--- a/nginx_rproxy/nginx.conf
+++ b/nginx_rproxy/nginx.conf
@@ -4,11 +4,11 @@ server {
     server_name codetest-st-app;
 
     location / {
-        proxy_pass http://frontend:8501/;
+        proxy_pass http://web:8501/;
     }
 
     location /stream {
-        proxy_pass http://frontend:8501/stream;
+        proxy_pass http://web:8501/stream;
         proxy_http_version 1.1;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
