--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,6 +2,6 @@ FROM debian:latest
 
 RUN apt-get update && apt-get install -y python3 python3-pip
 RUN pip install virtualenv ipykernel numpy pandas streamlit pika celery
-COPY frontend.py /data/frontend.py
+COPY web.py /data/web.py
 EXPOSE 8501
-ENTRYPOINT python3 /data/frontend.py
+ENTRYPOINT streamlit run /data/web.py
