Added API, Mongo implementation

--- a/apiserv/Dockerfile
+++ b/apiserv/Dockerfile
@@ -2,11 +2,11 @@ FROM debian:latest
 
 RUN apt-get update && apt-get install -y python3 python3-pip
 
-
+COPY apiserv.py /data/apiserv.py
 COPY requirements.txt /data/requirements.txt
+
 RUN pip install -r /data/requirements.txt
 
-WORKDIR /app
-COPY worker.py .
+WORKDIR /data
 
-ENTRYPOINT celery -A worker worker --autoscale 10 --loglevel=info
+ENTRYPOINT uvicorn apiserv:api_app --host 0.0.0.0
