replaced pymongo with motor. Still debugging

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ MONGO_INITDB_ROOT_USERNAME=27017
 MONGO_INITDB_ROOT_PASSWORD=1234
 MONGODB_PORT=27017
 STREAMLIT_PORT=8051
+TORNADO_PORT=8888
 REFCODE_LENGTH=5
