Completed test case logic for numeric and string cases

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ MONGO_INITDB_ROOT_PASSWORD=1234
 MONGODB_PORT=27017
 STREAMLIT_PORT=8051
 REFCODE_LENGTH=5
+DROP_EXISTING=True
+WRITE_CASES=True
+MONGO_INITDB_DATABASE=CodeTesting
