--- a/dbinit/Dockerfile
+++ b/dbinit/Dockerfile
@@ -7,6 +7,4 @@ COPY requirements.txt /requirements.txt
 
 RUN pip install -r requirements.txt
 
-# EXPOSE 27017
-
-# ENTRYPOINT python3 /data/create_db.py
+ENTRYPOINT python3 /data/create_db.py
