--- a/apiserv/Dockerfile
+++ b/apiserv/Dockerfile
@@ -2,8 +2,9 @@ FROM debian:latest
 
 RUN apt-get update && apt-get install -y python3 python3-pip
 
-COPY apiserv.py /data/apiserv.py
-COPY requirements.txt /data/requirements.txt
+COPY ./apiserv/apiserv.py /data/apiserv.py
+COPY ./apiserv/requirements.txt /data/requirements.txt
+COPY ./celery_common /data/celery_common
 
 RUN pip install -r /data/requirements.txt
 
