--- a/nginx_rproxy/nginx.conf
+++ b/nginx_rproxy/nginx.conf
@@ -1,7 +1,14 @@
+upstream backend {
+    ip_hash;
+    server web;
+}
+
 server {
 
     listen 80;
     server_name codetest-st-app;
+    keepalive_timeout 5;
+
 
     location / {
         proxy_pass http://web:8501/;
@@ -15,6 +22,8 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_read_timeout 86400;
+        real_ip_header X-Real-IP;
+        proxy_redirect off;
     }
 
 }
