--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,12 +1,9 @@
 FROM debian:latest
 
 RUN apt-get update && apt-get install -y python3 python3-pip
-
-
 COPY requirements.txt /data/requirements.txt
 RUN pip install -r /data/requirements.txt
 
-WORKDIR /app
-COPY worker.py .
+COPY dashboard.py /data/dashboard.py
 
-ENTRYPOINT celery -A worker worker --autoscale 10 --loglevel=info
+ENTRYPOINT streamlit run /data/dashboard.py
