--- a/dbinit/Dockerfile
+++ b/dbinit/Dockerfile
@@ -1,10 +1,13 @@
 FROM mongo:latest
 
 RUN apt-get update && apt-get install -y python3 python3-pip
-
-COPY create_db.py /data/create_db.py
-COPY requirements.txt /requirements.txt
-
+COPY ./dbinit/requirements.txt /requirements.txt
 RUN pip install -r requirements.txt
 
-ENTRYPOINT python3 /data/create_db.py
+COPY ./dbinit/create_db.py /data/create_db.py
+
+WORKDIR /data
+
+ENTRYPOINT python3 create_db.py
+
+
