--- a/dbhandler/Dockerfile
+++ b/dbhandler/Dockerfile
@@ -4,4 +4,4 @@ RUN pip3 install -r requirements.txt
 ADD ./celery_common /celery_common/
 ADD ./dbhandler/main.py /
 
-ENTRYPOINT celery -A main worker --concurrency=4 --loglevel=info -n database_handler_worker.%h
+ENTRYPOINT celery -A main worker --loglevel=info -n database_handler_worker.%h
