--- a/testcaller/Dockerfile
+++ b/testcaller/Dockerfile
@@ -4,4 +4,4 @@ RUN pip3 install -r requirements.txt
 ADD ./celery_common /celery_common/
 ADD ./testcaller/main.py /
 
-ENTRYPOINT celery -A main worker --concurrency=1 --loglevel=info -n test_caller_worker.%h
+ENTRYPOINT celery -A main worker --loglevel=info -n test_caller_worker.%h
